# brewry

./: .gitignore  Cargo.toml  README.md  test.rry
docs/development/: syntax.abnf
src/: ast.rs  components.rs  hir.rs  lib.rs  main.rs  names.rs  rst.rs  source.rs  token.rs
src/inheritance/: components.rs  mentions.rs  mod.rs
src/messages/: mod.rs  parse.rs  resolve.rs  types.rs
src/parse/: declarations.rs  expressions.rs  matcher.rs  mod.rs  statements.rs  types.rs
src/resolution/: mentions.rs  mod.rs  resolve.rs  within.rs
src/resolution/resolve/: mod.rs  traverse.rs
src/resolve/: mod.rs
src/types/: info.rs  mod.rs  subtyping.rs  tests.rs
src/types/check/: mod.rs
